--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "htmlspecialchars": "^1.0.5",
     "sqlite3": "^4.0.1"
   }
