--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express-session": "^1.15.6",
     "htmlspecialchars": "^1.0.5",
     "sqlite3": "^4.0.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
