--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "",
   "version": "",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
